<resources>
    <string name="app_name">tand0.shogio</string>
    <string name="app_log">Log</string>
    <string name="tab_log">Log</string>
    <string name="setting_login">Login</string>
    <string name="setting_turn">Turn</string>
    <string name="setting_ip">IP Address</string>
    <string name="ip_10_0_2_2">10.0.2.2</string>
    <string name="ip_wdoor_c_u_tokyo_ac_jp">wdoor.c.u-tokyo.ac.jp</string>
    <string name="ip_wgserver_computer_shogi_org">gserver.computer-shogi.org</string>
    <string name="ip_gserver_denryu_sen_jp">gserver.denryu-sen.jp</string>
    <string name="setting_port">Port Number</string>
    <string name="setting_user">User Name</string>
    <string name="setting_pass">Password</string>
    <string name="setting_ip_hint">10.0.2.2</string>
    <string name="setting_port_hint">4081</string>
    <string name="setting_user_hint">ANShogiO</string>
    <string name="setting_pass_hint">ANShogiO</string>
    <string name="setting_manual">Manual Mode</string>
    <string name="setting_manual_hint">Enable Manual Mode</string>
    <string name="setting_gamename">Game Name</string>
    <string name="setting_gamename_hint">default-1500-0</string>
    <string name="setting_looping">Continue</string>
    <string name="setting_looping_hint">Continue Game</string>
    <string name="setting_explorer">Explorer</string>
    <string name="explorer_max_table_factory">Max Table Factory</string>
    <string name="explorer_max_no_change">Max No Change</string>
    <string name="explorer_max_level">Max Level</string>
    <string name="explorer_min_son">Min Son</string>
    <string name="setting_stop">Stop</string>
    <string name="setting_stop_hint">Stop Game</string>
    <string name="setting_spinner">Select */+/-</string>
    <string name="setting_used_csa_extension">CSA Extension Mode</string>
    <string name="setting_used_csa_extension_hint">Enable CSA Extension Mode</string>
    <string name="setting_connect">Connect</string>
    <string name="setting_load">Load</string>
    <string name="engine_clean">Clean</string>
    <string name="engine_turn">Checking the evaluation value of the game record</string>
    <string name="action_show_thread">Show thread</string>
    <string name="action_flipping_vertical">Flipping vertical</string>
    <string name="action_flipping_horizontal">Flipping horizontal</string>
    <string name="setting_save">Save</string>
    <string name="engine_random">Random</string>
    <string name="engine_database">Database</string>
    <string name="engine_eval">Eval</string>
    <string name="engine_db_move">Eval from DB</string>
    <string name="engine_explorer">Explorer</string>
    <string name="engine_mate">Mate</string>
    <string name="engine_bad_move">Bad Move from DB</string>
    <string name="engine_top_of_bad">Forbidden table</string>
    <string name="engine_read_csa">Read CSA File</string>
    <string name="engine_read_csa_hint">Read CSA File from external storage</string>
    <string name="select">Select</string>
    <string name="eval">Eval</string>
    <string name="action_report">Issues report</string>
    <string name="action_report_hint">Apps that use AI to generate content must offer an in-app user reporting feature that allows users to report or flag inappropriate content to the developer without having to leave the app.
</string>
    <string name="action_policy">Privacy Policy and Overview</string>
    <string name="action_policy_hint">A privacy policy is required by Google Play Store policies, and you cannot publish this app without one.</string>

</resources>
