<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/engine_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_database"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_eval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_eval"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_explorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_explorer"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_mate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_mate"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_random"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_db_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_db_move"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_bad_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_bad_move"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_top_of_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_top_of_bad"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_clean"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/engine_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_turn"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/action_show_thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_show_thread"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/action_flipping_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_flipping_vertical"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/action_flipping_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_flipping_horizontal"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_read_csa_hint"
            android:layout_marginStart="25sp"
            android:minHeight="24dp"
            android:layout_marginBottom="5dp"  />
        <Button
            android:id="@+id/engine_read_csa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_read_csa"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_policy_hint"
            android:layout_marginStart="25sp"
            android:minHeight="24dp"
            android:layout_marginBottom="5dp"  />
        <Button
            android:id="@+id/action_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_policy"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_report_hint"
            android:layout_marginStart="25sp"
            android:minHeight="24dp"
            android:layout_marginBottom="5dp"  />
        <Button
            android:id="@+id/action_report"
            android:text="@string/action_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25sp"
            android:minHeight="48dp" />
    </LinearLayout>
</ScrollView>
